Memory Cache Limit stops working after set to 2048 #32666

Closed
opened 2012-09-26 12:38:38 +02:00 by Ken Nign · 3 comments
Member

%%%Summary: Once the Sequencer / Clip Editor: Memory Cache Limit option is set to 2048 (or above). The cache limiter stops working, more and more memory will be allocated to store the frames until they've all been cached. Once the bug is encountered, lowering the option won't force the cache to shrink as it should.

Steps to reproduce:
Open Blender and set the Memory Cache Limit to 2047 (the highest working value).

In the Clip Editor load a big image sequence, and set the end frame to a number high enough that the 2047 setting isn't enough to cache the whole clip.

Hit alt-a to play the clip and fill the cache.

Set the Cache Limit to 2048, then hit alt-a. Now the remaining un-cached portion of the clip will be cached, consuming as much RAM as it need to.

Now, setting the Cache back down to a small value (like 1), won't free the too large cache that's in use.

I've tested and confirmed on two different machines, both Windows 7 64bit. Attached is the system-info.txt file from one of them. I also tested and confirmed it with the last official release (2.63.0).%%%

%%%Summary: Once the Sequencer / Clip Editor: Memory Cache Limit option is set to 2048 (or above). The cache limiter stops working, more and more memory will be allocated to store the frames until they've all been cached. Once the bug is encountered, lowering the option won't force the cache to shrink as it should. Steps to reproduce: Open Blender and set the Memory Cache Limit to 2047 (the highest working value). In the Clip Editor load a big image sequence, and set the end frame to a number high enough that the 2047 setting isn't enough to cache the whole clip. Hit alt-a to play the clip and fill the cache. Set the Cache Limit to 2048, then hit alt-a. Now the remaining un-cached portion of the clip will be cached, consuming as much RAM as it need to. Now, setting the Cache back down to a small value (like 1), won't free the too large cache that's in use. I've tested and confirmed on two different machines, both Windows 7 64bit. Attached is the system-info.txt file from one of them. I also tested and confirmed it with the last official release (2.63.0).%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev50903. Thanks for the report, closing.%%%

%%%Fixed in svn rev50903. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32666
No description provided.