Fix #32666: Memory Cache Limit stops working after set to 2048

Solved two issues here:

- RNA update function for cache limiter wasn't type-casting to size_t
  type, which lead to long int overflow.

- Display buffer size in color management wasn't calculated properly,
  ended up with much more extra memory usage than it's needed.